--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -54,6 +54,12 @@
             <!-- <HINT> Use Bootstrap Collapse to hide exam first, more details could be found here
             https://www.w3schools.com/bootstrap4/bootstrap_collapse.asp-->
 
+            {% if user.is_authenticated %}
+            <br>
+            <center>
+            <button class='btn btn-primary' data-toggle="collapse"  
+            data-target="#exam">Show/hide questios </button></center>
+            
             <!--
 
             A collapse example here:
@@ -75,6 +81,34 @@
             <input type="check" name="choice_{{choice.id}}" id="{{choice.id}}" ...>
             -->
 
+            {% if user.is_authenticated %}
+            <br>
+            <center>
+            <button class='btn btn-primary' data-toggle="collapse"  
+            data-target="#exam">Show/hide questios </button></center>
+        
+            <br>
+            <form id="questionform" action="submit/" method="post" style='width:500px; margin:auto'>
+            <div id="exam" class="collapse show ">
+            <div class="card-columns-vertical" >
+                {% for question in course.question_set.all %}
+                
+                <div class="card mt-1">
+                    <div class="card-header"><h5>{{ question.question_text}}</h5></div>
+                    {% csrf_token %}
+                    <div class="form-group" style='padding: 20px;'>
+
+                            {% for choice in question.choice_set.all %}
+                                
+                            <div class="form-check">
+                                <label class="form-check-label">
+                                    <input type="checkbox" name="choice_{{choice.id}}"
+                                           class="form-check-input" id="{{choice.id}}"
+                                           value="{{choice.id}}">{{ choice.chioce_text }}
+                                </label>
+                            </div>
+                              {% endfor %}
+
             <!-- A choice submission form example
             <form id="questionform" action="point to a submit view" method="post">
                         ... for each question in the course ...
@@ -95,6 +129,17 @@
                     <input class="btn btn-success btn-block" type="submit" value="Submit">
             </form> -->
 
+                            <br /> 
+                            
+                    </div>
+                </div>
+                {% endfor %}
+                <input class="btn btn-success btn-block" type="submit" value="Submit">
+            </form>
+            {% endif %}
+            </div>
+            </div>
+            
             <!--Check here to see more details Bootstrap checkbox
              https://www.w3schools.com/bootstrap4/bootstrap_forms_inputs.asp-->
     </div>
