Corrected mispell of choices

--- a/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/course_detail_bootstrap.html
@@ -82,7 +82,7 @@
         
             <br>
             <form id="questionform" action="submit/" method="post" style='width:500px; margin:auto'>
-            <div id="exam" class="collapse show ">
+            <div id="exam" class="collapse">
             <div class="card-columns-vertical" >
 
                 {% for question in course.question_set.all %}
