--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -74,7 +74,7 @@
                         </tr>
                        {% for choice in question.choice_set.all %}
                        <tr >
-                           <td>{{ choice.chioce_text }}  </td>
+                           <td>{{ choice.choice_text }}  </td>
                            <td
                            
                            style='background-color:{% for key, value in c_results.items %}
